sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: reassignment to val
        j = best
          ^